# marian-dev

./: .gitmodules  CMakeLists.txt
scripts/contrib/: convert_and_merge_lm.py  debug_npz.py  rename_lm.py
scripts/paraphrase/: preprocess_file.py
src/: CMakeLists.txt
src/common/: binary.cpp  config_parser.cpp
src/data/: corpus_base.h
src/embedder/: embedder.h
src/graph/: expression_graph.cpp  expression_graph.h  expression_operators.cpp  expression_operators.h  node_operators_binary.h
src/layers/: generic.cpp  generic.h
src/models/: encdec.h  model_factory.cpp  s2s_lmint.h  states.h  transformer.h
src/optimizers/: optimizers.h
src/rescorer/: rescorer.h
src/rnn/: cells.h  types.h
src/tensors/: backend.h  tensor_operators.h
src/tensors/cpu/: intgemm_interface.h  prod.cpp  prod_blas.h  tensor_operators.cpp
src/tensors/cpu/bf16/: bf16.h
src/tensors/gpu/: backend.h  element.inc  prod.cpp  prod.h  tensor_operators.cu
src/tests/: CMakeLists.txt  standalone.cu
src/training/: communicator.cpp  communicator.h  communicator_mpi.h  communicator_oneccl.h  graph_group_async.cpp  graph_group_async.cu  graph_group_async.h  graph_group_async_drop.h  graph_group_multinode.cpp  graph_group_singleton.h  graph_group_sync.cpp  graph_group_sync.cu  graph_group_sync.h  scheduler.h  training.h
src/translator/: beam_search.cpp  beam_search.h  helpers.cu  hypothesis.h  nth_element.cu  translator.h
